--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,6 +45,7 @@ layout: default
 
   <section class="comment">
   <div id="disqus_thread"></div>
+  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script type="text/javascript">
       var disqus_shortname = '{{ site.disqus }}';
       var disqus_identifier = '{{ page.guid }}';
