blog and style update

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -49,7 +49,7 @@ layout: default
   <script type="text/javascript">
       var disqus_shortname = '{{ site.disqus }}';
       var disqus_identifier = '{{ page.guid }}';
-
+	  leave_comment();
       function leave_comment() {
           var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
           dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
